# subnetting

./: CMakeLists.txt  main.cpp
networking/include/: network.hpp
networking/src/: netparser.cpp  network.cpp
utilities/: CMakeLists.txt
utilities/include/: colors.hpp  generate_guide.hpp  state_manager.hpp  utilities.hpp  visualizer.hpp  vlan_manager.hpp
utilities/src/: generate_guide.cpp  state_manager.cpp  utilities.cpp  visualizer.cpp  vlan_manager.cpp
workflow/include/: documentation.hpp  gui_layer.hpp  topology.hpp
workflow/src/: documentation.cpp  gui_layer.cpp  topology.cpp
